# TheSunProject

./: gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/sunproject/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/sunproject/: AnalysisActivity.kt  CaptureActivity.kt  GuideView.kt  HorizonLineView.kt  MainActivity.kt  NativeProbe.kt  NativeStitcher.kt  PanoramaViewActivity.kt  SensorLowPassFilter.kt  SunProjectApp.kt
app/src/main/java/com/example/sunproject/data/model/: CameraModelRecord.kt  CameraMountCalibration.kt  FrameRecord.kt  RingPlanRecord.kt  SessionRecord.kt
app/src/main/java/com/example/sunproject/data/storage/: CameraMountCalibrationStore.kt  JsonSessionStore.kt  SessionPaths.kt  SessionRepository.kt
app/src/main/java/com/example/sunproject/diagnostics/: FileLogger.kt
app/src/main/java/com/example/sunproject/domain/atlas/: AtlasBuildUseCase.kt  AtlasBundleAdjuster.kt  AtlasConfig.kt  AtlasDebugRenderer.kt  AtlasMath.kt  AtlasProjector.kt  MultiBandAtlasBlender.kt  SkyAtlas.kt  SolarPathOverlay.kt  ZenithFeatureRefiner.kt  ZenithMatrixProjector.kt  ZenithTopFaceRefiner.kt  ZenithYawDebugRenderer.kt
app/src/main/java/com/example/sunproject/domain/render3d/: PanoramaRenderer.kt  SphereMesh.kt
app/src/main/java/com/example/sunproject/domain/sensor/: AnchorCalibrator.kt  GyroTransport.kt  RotvecBuffer.kt
app/src/main/java/com/example/sunproject/domain/solar/: SolarGeometry.kt  SolarPathGenerator.kt
app/src/main/java/com/example/sunproject/ui/: CalibrationOverlayView.kt
app/src/main/res/layout/: activity_analysis.xml  activity_capture.xml  activity_main.xml  activity_panorama_view.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/sunproject/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
